apps/charlie-server/overlays/qas/resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charlie-server-deploy
spec:
  template:
    spec:
      containers:
        - name: charlie-server
          resources:
            requests:
              cpu: 64m
              memory: 96M
            limits:
              cpu: 100m
              memory: 128M
