apps/charlie-server/overlays/qas/ingress-web-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: charlie-server-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`automacaoqas.hypera.com.br`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: charlie-server-service-qas
          port: 80
